# KRX

./: .gitignore  BasicTypes.hpp  BufferIterator.hpp  CMakeLists.txt  Context.hpp  README.md  Rasterizer.hpp  Shaders.hpp  a.out  build.sh  main.cpp
build_cache/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: index.html
docs/styles/: font.css
old_code/: Buffer.hpp  BufferLayout.hpp  Viewport.hpp  compile.sh  swp.hpp
source/krx/include/: krx.hpp
source/krx/include/internals/: buffer.hpp  constants.hpp  context.hpp  krx_resource.hpp  pipeline.hpp  pipeline_layout.hpp  processing_pipeline.hpp  shaders.hpp  swapchain.hpp  texture2d.hpp  validation_layer.hpp  view.hpp
source/krx/source/: buffer.cpp  context.cpp  context_draw_triangle.cpp  context_rasterizer.cpp  pipeline_layout.cpp  ppipeline_triangles.cpp  rasterization_utils.hpp  shader_pipeline.cpp  shaders.hpp  swapchain.cpp  texture2d.cpp  validation_layer.cpp  validation_layer.hpp  view.cpp
source/krx_shaders/: compile_shaders.sh  depth_and_blending_frag.c  depth_and_blending_frag.krxsl  depth_and_blending_vert.c  depth_and_blending_vert.krxsl  hello_triangle_frag.c  hello_triangle_frag.krxsl  hello_triangle_vert.c  hello_triangle_vert.krxsl  shader_defs.h
source/samples/: 01_create_window_with_krx.cpp  02_enable_validation_layer.cpp  03_hello_triangle.cpp  04_depth_and_blending.cpp
